// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#EmailField() it should display validation errors 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "email": "joejoe",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="email"
      onChange={[Function]}
      type="email"
      value="joejoe"
    />
  </div>
</form>
`;

exports[`#EmailField() should render a single input tag with no bootstrap styles 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "email": "email@email.com",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="email"
      onChange={[Function]}
      type="email"
      value="email@email.com"
    />
  </div>
</form>
`;

exports[`#EmailField() should render an email field with the bootstrap styled tags 1`] = `
<form
  onSubmit={[Function]}
  state={
    Object {
      "email": "joe@joe.com",
    }
  }
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="email"
      onChange={[Function]}
      type="email"
      value="joe@joe.com"
    />
  </div>
</form>
`;
